feat(view): improve product form handling and event management
- Enhanced ProductFormSaveEvent to carry the saved product
- Modified ProductService.save() to return the saved product
- Improved error handling in ProductFormController:
  * Better duplicate product code handling
  * More specific exception catching
  * Proper product state reset on errors
- Added cleanup when loading empty form
- Fixed product manager controller to:
  * Handle ESC key to close form
  * Properly add new products to table
  * Refresh product list after save
- Added proper event handling for add button
- Improved form cancellation behavior

These changes provide better feedback on save operations and more robust form handling,
while ensuring the product list stays synchronized with the database.